--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
-  "TITLE": "GsCal(en)",
+  "TITLE": "Could Genshin Impact",
   "HOME": {
-    "TITLE": "GenshinCal(en)"
+    "TITLE": "Genshin Damage Calculate"
   }
 }
