--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,9 @@
   "HOME": {
     "TITLE": "Genshin Damage Calculate"
   },
+  "CHARACTER": {
+    "props": "人物属性en"
+  },
   "PROPS": {
     "CONSTELLATION": "Constellation",
     "LEVEL": "Level",
@@ -12,25 +15,25 @@
     "HP_UP": "HP(Up)",
     "ATTACK_UP": "Attack(Up)",
     "DEFENSE_UP": "Defense(Up)",
-    "CRIT_RATE": "暴击率",
-    "CRIT_DMG": "暴击伤害",
-    "ENERGY_RECHARGE": "充能效率",
-    "HEALING_BONUS": "治疗增益",
-    "REVERSE_HEALING_BONUS": "受治疗增益",
-    "ELEMENTAL_MASTERY": "元素精通",
-    "DMG_BONUS_CRYO": "冰伤",
-    "DMG_BONUS_ANEMO": "风伤",
-    "DMG_BONUS_PHYSICAL": "物伤",
-    "DMG_BONUS_ELECTRO": "雷伤",
-    "DMG_BONUS_GEO": "岩伤",
-    "DMG_BONUS_PYRO": "火伤",
-    "DMG_BONUS_HYDRO": "水伤",
-    "DMG_BONUS_DENDRO": "草伤",
-    "DMG_BONUS_ALL": "全增伤",
-    "DMG_BONUS_NORMAL": "普攻增伤",
-    "DMG_BONUS_CHARGED": "重击增伤",
-    "DMG_BONUS_PLUNGING": "下落增伤",
-    "DMG_BONUS_SKILL": "元素战技增伤",
-    "DMG_BONUS_ELEMENTAL_BURST": "元素爆发增伤"
+    "CRIT_RATE": "CRIT RATE",
+    "CRIT_DMG": "CRIT DMG",
+    "ENERGY_RECHARGE": "Energy Recharge",
+    "HEALING_BONUS": "Healing Bonus",
+    "REVERSE_HEALING_BONUS": "Reverse Healing Bonus",
+    "ELEMENTAL_MASTERY": "Elemental Mastery",
+    "DMG_BONUS_CRYO": "Cryo Bonus",
+    "DMG_BONUS_ANEMO": "Anemo Bonus",
+    "DMG_BONUS_PHYSICAL": "Physical Bonus",
+    "DMG_BONUS_ELECTRO": "Electro Bonus",
+    "DMG_BONUS_GEO": "Geo Bonus",
+    "DMG_BONUS_PYRO": "Pyro Bonus",
+    "DMG_BONUS_HYDRO": "Hydro Bonus",
+    "DMG_BONUS_DENDRO": "Dendro Bonus",
+    "DMG_BONUS_ALL": "All Bonus",
+    "DMG_BONUS_NORMAL": "Normal Bonus",
+    "DMG_BONUS_CHARGED": "Charged Bonus",
+    "DMG_BONUS_PLUNGING": "Plunging Bonus",
+    "DMG_BONUS_SKILL": "Skill Bonus",
+    "DMG_BONUS_ELEMENTAL_BURST": "Elemental Burst Bonus"
   }
 }
