--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,19 +22,19 @@
     "HEALING_BONUS": "Healing Bonus",
     "REVERSE_HEALING_BONUS": "Reverse Healing Bonus",
     "ELEMENTAL_MASTERY": "Elemental Mastery",
-    "DMG_BONUS_CRYO": "Cryo Bonus",
-    "DMG_BONUS_ANEMO": "Anemo Bonus",
-    "DMG_BONUS_PHYSICAL": "Physical Bonus",
-    "DMG_BONUS_ELECTRO": "Electro Bonus",
-    "DMG_BONUS_GEO": "Geo Bonus",
-    "DMG_BONUS_PYRO": "Pyro Bonus",
-    "DMG_BONUS_HYDRO": "Hydro Bonus",
-    "DMG_BONUS_DENDRO": "Dendro Bonus",
-    "DMG_BONUS_ALL": "All Bonus",
-    "DMG_BONUS_NORMAL": "Normal Bonus",
-    "DMG_BONUS_CHARGED": "Charged Bonus",
-    "DMG_BONUS_PLUNGING": "Plunging Bonus",
-    "DMG_BONUS_SKILL": "Skill Bonus",
-    "DMG_BONUS_ELEMENTAL_BURST": "Elemental Burst Bonus"
+    "DMG_BONUS_CRYO": "Cryo DMG Bonus",
+    "DMG_BONUS_ANEMO": "Anemo DMG Bonus",
+    "DMG_BONUS_PHYSICAL": "Physical DMG Bonus",
+    "DMG_BONUS_ELECTRO": "Electro DMG Bonus",
+    "DMG_BONUS_GEO": "Geo DMG Bonus",
+    "DMG_BONUS_PYRO": "Pyro DMG Bonus",
+    "DMG_BONUS_HYDRO": "Hydro DMG Bonus",
+    "DMG_BONUS_DENDRO": "Dendro DMG Bonus",
+    "DMG_BONUS_ALL": "DMG Bonus",
+    "DMG_BONUS_NORMAL": "Normal DMG Bonus",
+    "DMG_BONUS_CHARGED": "Charged DMG Bonus",
+    "DMG_BONUS_PLUNGING": "Plunging DMG Bonus",
+    "DMG_BONUS_SKILL": "Skill DMG Bonus",
+    "DMG_BONUS_ELEMENTAL_BURST": "Elemental Burst DMG Bonus"
   }
 }
