fix the background

--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -24,7 +24,7 @@
     "ELEMENTAL_MASTERY": "元素精通",
     "DMG_BONUS_CRYO": "冰元素伤害加成",
     "DMG_BONUS_ANEMO": "风元素伤害加成",
-    "DMG_BONUS_PHYSICAL": "物元素伤害加成",
+    "DMG_BONUS_PHYSICAL": "物理伤害加成",
     "DMG_BONUS_ELECTRO": "雷元素伤害加成",
     "DMG_BONUS_GEO": "岩元素伤害加成",
     "DMG_BONUS_PYRO": "火元素伤害加成",
