--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -4,14 +4,15 @@
     "TITLE": "原神傷害計算"
   },
   "CHARACTER": {
-    "PROPS": "人物属性"
+    "PROPS": "人物属性",
+    "TALENTS": "技能天赋",
+    "CONSTELLATION": "命座"
   },
   "WEAPON": {
     "NAME": "武器名",
     "PROPS": "武器属性"
   },
   "PROPS": {
-    "CONSTELLATION": "命座",
     "LEVEL": "等級",
     "ASCENDED": "（已突破）",
     "HP": "生命值",
