--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -4,14 +4,15 @@
     "TITLE": "原神ダメージ計算"
   },
   "CHARACTER": {
-    "PROPS": "人物属性"
+    "PROPS": "人物属性",
+    "TALENTS": "技能天赋",
+    "CONSTELLATION": "星座"
   },
   "WEAPON": {
     "NAME": "武器名",
     "PROPS": "武器属性"
   },
   "PROPS": {
-    "CONSTELLATION": "星座",
     "LEVEL": "レベル",
     "ASCENDED": "（已突破）",
     "HP": "生命力",
