--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -87,7 +87,10 @@
       "SHIELD": "结晶生命值"
     },
     "OTHER": {
-      "HEALING": "治疗值"
+      "HEALING": "治疗值",
+      "PRODUCT": "创造物生命值",
+      "SHIELD": "盾量",
+      "BUFF": "增益"
     }
   }
 }
