--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,7 +29,9 @@
     "SUB1": "副词条1",
     "SUB2": "副词条2",
     "SUB3": "副词条3",
-    "SUB4": "副词条4"
+    "SUB4": "副词条4",
+    "SET1": "套装1",
+    "SET2": "套装2"
   },
   "OTHER": {
     "NAME": "其他",
