--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -4,42 +4,42 @@
     "TITLE": "原神傷害計算"
   },
   "CHARACTER": {
-    "PROPS": "人物属性",
-    "TALENTS": "技能天赋",
+    "PROPS": "人物屬性",
+    "TALENTS": "技能天賦",
     "CONSTELLATION": "命座"
   },
   "WEAPON": {
     "NAME": "武器名",
-    "PROPS": "武器属性",
-    "SMELTING":"精炼"
+    "PROPS": "武器屬性",
+    "SMELTING":"精煉"
   },
   "ENEMY": {
-    "NAME": "敌人名",
-    "PROPS": "敌人属性",
-    "PLAYERNUM": "玩家数"
+    "NAME": "敵人名",
+    "PROPS": "敵人屬性",
+    "PLAYERNUM": "玩家數"
   },
   "ARTIFACT": {
-    "NAME": "圣遗物",
+    "NAME": "聖遺物",
     "FLOWER": "生之花",
     "PLUME": "死之羽",
-    "SANDS": "时之沙",
+    "SANDS": "時之沙",
     "GOBLET": "空之杯",
     "CIRCLET": "理之冠",
-    "MAIN": "主词条",
-    "SUB1": "副词条1",
-    "SUB2": "副词条2",
-    "SUB3": "副词条3",
-    "SUB4": "副词条4",
-    "SET1": "套装1",
-    "SET2": "套装2"
+    "MAIN": "主詞條",
+    "SUB1": "副詞條1",
+    "SUB2": "副詞條2",
+    "SUB3": "副詞條3",
+    "SUB4": "副詞條4",
+    "SET1": "套裝1",
+    "SET2": "套裝2"
   },
   "OTHER": {
     "NAME": "其他",
-    "TARGET": "目标属性",
-    "SOURCE": "来源属性"
+    "TARGET": "目標屬性",
+    "TARGETVALUE": "目標值"
   },
   "SYS": {
-    "DELETE": "删除"
+    "DELETE": "刪除"
   },
   "PROPS": {
     "LEVEL": "等級",
@@ -71,7 +71,7 @@
     "DMG_BONUS_SKILL": "元素戰技傷害加成",
     "DMG_BONUS_ELEMENTAL_BURST": "元素爆發傷害加成",
     "DMG_ANTI_CRYO": "冰元素抗性",
-    "DMG_ANTI_ANEMO": "风元素抗性",
+    "DMG_ANTI_ANEMO": "風元素抗性",
     "DMG_ANTI_PHYSICAL": "物理抗性",
     "DMG_ANTI_ELECTRO": "雷元素抗性",
     "DMG_ANTI_GEO": "岩元素抗性",
@@ -81,44 +81,44 @@
   },
   "GENSHIN": {
     "DMG":{
-      "ORIGIN": "不暴击伤害",
-      "CRIT": "暴击伤害",
-      "EXPECT": "期望伤害",
-      "ORIGIN_VAPORIZE": "不暴击伤害(蒸发)",
-      "CRIT_VAPORIZE": "暴击伤害(蒸发)",
-      "EXPECT_VAPORIZE": "期望伤害(蒸发)",
-      "ORIGIN_MELT": "不暴击伤害(融化)",
-      "CRIT_MELT": "暴击伤害(融化)",
-      "EXPECT_MELT": "期望伤害(融化)",
-      "CRYO": "冰元素伤害",
-      "ANEMO": "风元素伤害",
-      "PHYSICAL": "物元素伤害",
-      "ELECTRO": "雷元素伤害",
-      "GEO": "岩元素伤害",
-      "PYRO": "火元素伤害",
-      "HYDRO": "水元素伤害",
-      "DENDRO": "草元素伤害",
-      "OVERLOADED": "超载伤害",
-      "BURNING": "燃烧伤害",
-      "ELECTROCHARGED": "感电伤害",
-      "SUPERCONDUCT": "超导伤害",
-      "SWIRL_CRYO": "冰扩散伤害",
-      "SWIRL_ELECTRO": "雷扩散伤害",
-      "SWIRL_PYRO": "火扩散伤害",
-      "SWIRL_HYDRO": "水扩散伤害",
-      "DESTRUCTION": "破冰伤害",
-      "SHIELD": "结晶生命值"
+      "ORIGIN": "不暴擊傷害",
+      "CRIT": "暴擊傷害",
+      "EXPECT": "期望傷害",
+      "ORIGIN_VAPORIZE": "不暴擊傷害(蒸發)",
+      "CRIT_VAPORIZE": "暴擊傷害(蒸發)",
+      "EXPECT_VAPORIZE": "期望傷害(蒸發)",
+      "ORIGIN_MELT": "不暴擊傷害(融化)",
+      "CRIT_MELT": "暴擊傷害(融化)",
+      "EXPECT_MELT": "期望傷害(融化)",
+      "CRYO": "冰元素傷害",
+      "ANEMO": "風元素傷害",
+      "PHYSICAL": "物理傷害",
+      "ELECTRO": "雷元素傷害",
+      "GEO": "岩元素傷害",
+      "PYRO": "火元素傷害",
+      "HYDRO": "水元素傷害",
+      "DENDRO": "草元素傷害",
+      "OVERLOADED": "超載傷害",
+      "BURNING": "燃燒傷害",
+      "ELECTROCHARGED": "感電傷害",
+      "SUPERCONDUCT": "超導傷害",
+      "SWIRL_CRYO": "冰擴散傷害",
+      "SWIRL_ELECTRO": "雷擴散傷害",
+      "SWIRL_PYRO": "火擴散傷害",
+      "SWIRL_HYDRO": "水擴散傷害",
+      "DESTRUCTION": "破冰傷害",
+      "SHIELD": "結晶生命值"
     },
     "OTHER": {
-      "HEALING": "治疗值",
-      "PRODUCT": "创造物生命值",
+      "HEALING": "治療值",
+      "PRODUCT": "創造物生命值",
       "SHIELD": "盾量",
       "BUFF": "增益",
       "OVERRIDE_ELEMENT": "附魔",
-      "DEFAULT_ELEMENT": "默认",
+      "DEFAULT_ELEMENT": "默認",
       "DMG_BONUS_CRYO": "冰元素附魔",
-      "DMG_BONUS_ANEMO": "风元素附魔",
-      "DMG_BONUS_PHYSICAL": "物理附魔",
+      "DMG_BONUS_ANEMO": "風元素附魔",
+      "DMG_BONUS_PHYSICAL": "物理",
       "DMG_BONUS_ELECTRO": "雷元素附魔",
       "DMG_BONUS_GEO": "岩元素附魔",
       "DMG_BONUS_PYRO": "火元素附魔",
