--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,49 +1,49 @@
 {
-  "TITLE": "Could Genshin Impact",
+  "TITLE": "Cloud Genshin Impact",
   "HOME": {
-    "TITLE": "Genshin Damage Calculate"
+    "TITLE": "Genshin Damage Calculator"
   },
   "CHARACTER": {
-    "PROPS": "人物属性",
-    "TALENTS": "技能天赋",
+    "PROPS": "Character Attributes",
+    "TALENTS": "Skill Talents",
     "CONSTELLATION": "Constellation"
   },
   "WEAPON": {
-    "NAME": "武器名",
-    "PROPS": "武器属性",
-    "SMELTING":"精炼"
+    "NAME": "Weapon Name",
+    "PROPS": "Weapon Attributes",
+    "SMELTING":"Smelting"
   },
   "ENEMY": {
-    "NAME": "敌人名",
-    "PROPS": "敌人属性",
-    "PLAYERNUM": "玩家数"
+    "NAME": "Enemy Name",
+    "PROPS": "Enemy Attributes",
+    "PLAYERNUM": "Number of Players"
   },
   "ARTIFACT": {
-    "NAME": "圣遗物",
-    "FLOWER": "生之花",
-    "PLUME": "死之羽",
-    "SANDS": "时之沙",
-    "GOBLET": "空之杯",
-    "CIRCLET": "理之冠",
-    "MAIN": "主词条",
-    "SUB1": "副词条1",
-    "SUB2": "副词条2",
-    "SUB3": "副词条3",
-    "SUB4": "副词条4",
-    "SET1": "套装1",
-    "SET2": "套装2"
+    "NAME": "Artifact",
+    "FLOWER": "Flower",
+    "PLUME": "Plume",
+    "SANDS": "Sands",
+    "GOBLET": "Goblet",
+    "CIRCLET": "Circlet",
+    "MAIN": "Main Stat",
+    "SUB1": "Substat 1",
+    "SUB2": "Substat 2",
+    "SUB3": "Substat 3",
+    "SUB4": "Substat 4",
+    "SET1": "Set 1",
+    "SET2": "Set 2"
   },
   "OTHER": {
-    "NAME": "其他",
-    "TARGET": "目标属性",
-    "SOURCE": "来源属性"
+    "NAME": "Other",
+    "TARGET": "Target Attribute",
+    "TARGETVALUE": "Target Value"
   },
   "SYS": {
-    "DELETE": "删除"
+    "DELETE": "Delete"
   },
   "PROPS": {
     "LEVEL": "Level",
-    "ASCENDED": "（已突破）",
+    "ASCENDED": "(broken)",
     "HP": "HP",
     "ATTACK": "Attack",
     "DEFENSE": "Defense",
@@ -70,60 +70,60 @@
     "DMG_BONUS_PLUNGING": "Plunging DMG Bonus",
     "DMG_BONUS_SKILL": "Skill DMG Bonus",
     "DMG_BONUS_ELEMENTAL_BURST": "Elemental Burst DMG Bonus",
-    "DMG_ANTI_CRYO": "冰元素抗性",
-    "DMG_ANTI_ANEMO": "风元素抗性",
-    "DMG_ANTI_PHYSICAL": "物理抗性",
-    "DMG_ANTI_ELECTRO": "雷元素抗性",
-    "DMG_ANTI_GEO": "岩元素抗性",
-    "DMG_ANTI_PYRO": "火元素抗性",
-    "DMG_ANTI_HYDRO": "水元素抗性",
-    "DMG_ANTI_DENDRO": "草元素抗性"
+    "DMG_ANTI_CRYO": "Cryo Resistance",
+    "DMG_ANTI_ANEMO": "Anemo Resistance",
+    "DMG_ANTI_PHYSICAL": "Physical Resistance",
+    "DMG_ANTI_ELECTRO": "Electro Resistance",
+    "DMG_ANTI_GEO": "Geo Resistance",
+    "DMG_ANTI_PYRO": "Pyro Resistance",
+    "DMG_ANTI_HYDRO": "Hydro Resistance",
+    "DMG_ANTI_DENDRO": "Dendro Resistance"
   },
   "GENSHIN": {
     "DMG":{
-      "ORIGIN": "不暴击伤害",
-      "CRIT": "暴击伤害",
-      "EXPECT": "期望伤害",
-      "ORIGIN_VAPORIZE": "不暴击伤害(蒸发)",
-      "CRIT_VAPORIZE": "暴击伤害(蒸发)",
-      "EXPECT_VAPORIZE": "期望伤害(蒸发)",
-      "ORIGIN_MELT": "不暴击伤害(融化)",
-      "CRIT_MELT": "暴击伤害(融化)",
-      "EXPECT_MELT": "期望伤害(融化)",
-      "CRYO": "冰元素伤害",
-      "ANEMO": "风元素伤害",
-      "PHYSICAL": "物元素伤害",
-      "ELECTRO": "雷元素伤害",
-      "GEO": "岩元素伤害",
-      "PYRO": "火元素伤害",
-      "HYDRO": "水元素伤害",
-      "DENDRO": "草元素伤害",
-      "OVERLOADED": "超载伤害",
-      "BURNING": "燃烧伤害",
-      "ELECTROCHARGED": "感电伤害",
-      "SUPERCONDUCT": "超导伤害",
-      "SWIRL_CRYO": "冰扩散伤害",
-      "SWIRL_ELECTRO": "雷扩散伤害",
-      "SWIRL_PYRO": "火扩散伤害",
-      "SWIRL_HYDRO": "水扩散伤害",
-      "DESTRUCTION": "破冰伤害",
-      "SHIELD": "结晶生命值"
+      "ORIGIN": "No Critical Damage",
+      "CRIT": "Critical Damage",
+      "EXPECT": "Expected Damage",
+      "ORIGIN_VAPORIZE": "No Critical Damage (Vaporize)",
+      "CRIT_VAPORIZE": "Critical Damage (Vaporize)",
+      "EXPECT_VAPORIZE": "Expected Damage (Vaporize)",
+      "ORIGIN_MELT": "No Critical Damage (Melt)",
+      "CRIT_MELT": "Critical Damage (Melt)",
+      "EXPECT_MELT": "Expected Damage (Melt)",
+      "CRYO": "Cryo Damage",
+      "ANEMO": "Anemo Damage",
+      "PHYSICAL": "Physical Damage",
+      "ELECTRO": "Electro Damage",
+      "GEO": "Geo Damage",
+      "PYRO": "Pyro Damage",
+      "HYDRO": "Hydro Damage",
+      "DENDRO": "Dendro Damage",
+      "OVERLOADED": "Overloaded Damage",
+      "BURNING": "Burning Damage",
+      "ELECTROCHARGED": "Electrocharged Damage",
+      "SUPERCONDUCT": "Superconduct Damage",
+      "SWIRL_CRYO": "CRYO Swirl Damage",
+      "SWIRL_ELECTRO": "Electro Swirl Damage",
+      "SWIRL_PYRO": "Pyro Swirl Damage",
+      "SWIRL_HYDRO": "Hydro Swirl Damage",
+      "DESTRUCTION": "Destruction Damage",
+      "SHIELD": "Elemental Shield HP"
     },
     "OTHER": {
-      "HEALING": "治疗值",
-      "PRODUCT": "创造物生命值",
-      "SHIELD": "盾量",
-      "BUFF": "增益",
-      "OVERRIDE_ELEMENT": "附魔",
-      "DEFAULT_ELEMENT": "默认",
-      "DMG_BONUS_CRYO": "冰元素附魔",
-      "DMG_BONUS_ANEMO": "风元素附魔",
-      "DMG_BONUS_PHYSICAL": "物理附魔",
-      "DMG_BONUS_ELECTRO": "雷元素附魔",
-      "DMG_BONUS_GEO": "岩元素附魔",
-      "DMG_BONUS_PYRO": "火元素附魔",
-      "DMG_BONUS_HYDRO": "水元素附魔",
-      "DMG_BONUS_DENDRO": "草元素附魔"
+      "HEALING": "Healing",
+      "PRODUCT": "Production HP",
+      "SHIELD": "Shield HP",
+      "BUFF": "Buff",
+      "OVERRIDE_ELEMENT": "Override Element",
+      "DEFAULT_ELEMENT": "Default",
+      "DMG_BONUS_CRYO": "Cryo",
+      "DMG_BONUS_ANEMO": "Anemo",
+      "DMG_BONUS_PHYSICAL": "Physical",
+      "DMG_BONUS_ELECTRO": "Electro",
+      "DMG_BONUS_GEO": "Geo",
+      "DMG_BONUS_PYRO": "Pyro",
+      "DMG_BONUS_HYDRO": "Hydro",
+      "DMG_BONUS_DENDRO": "Dendro"
     }
   }
 }
