--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -4,52 +4,52 @@
     "TITLE": "原神ダメージ計算"
   },
   "CHARACTER": {
-    "PROPS": "人物属性",
-    "TALENTS": "技能天赋",
-    "CONSTELLATION": "星座"
+    "PROPS": "キャラ属性",
+    "TALENTS": "スキル",
+    "CONSTELLATION": "命ノ星座"
   },
   "WEAPON": {
-    "NAME": "武器名",
+    "NAME": "武器",
     "PROPS": "武器属性",
-    "SMELTING":"精炼"
+    "SMELTING":"精錬"
   },
   "ENEMY": {
-    "NAME": "敌人名",
-    "PROPS": "敌人属性",
-    "PLAYERNUM": "玩家数"
+    "NAME": "敵",
+    "PROPS": "敵属性",
+    "PLAYERNUM": "プレイヤー数"
   },
   "ARTIFACT": {
-    "NAME": "圣遗物",
-    "FLOWER": "生之花",
-    "PLUME": "死之羽",
-    "SANDS": "时之沙",
-    "GOBLET": "空之杯",
-    "CIRCLET": "理之冠",
-    "MAIN": "主词条",
-    "SUB1": "副词条1",
-    "SUB2": "副词条2",
-    "SUB3": "副词条3",
-    "SUB4": "副词条4",
-    "SET1": "套装1",
-    "SET2": "套装2"
+    "NAME": "聖遺物",
+    "FLOWER": "生の花",
+    "PLUME": "死の羽",
+    "SANDS": "時の砂",
+    "GOBLET": "空の杯",
+    "CIRCLET": "理の冠",
+    "MAIN": "メイン",
+    "SUB1": "サブ１",
+    "SUB2": "サブ２",
+    "SUB3": "サブ３",
+    "SUB4": "サブ４",
+    "SET1": "セット１",
+    "SET2": "セット２"
   },
   "OTHER": {
-    "NAME": "其他",
-    "TARGET": "目标属性",
-    "SOURCE": "来源属性"
+    "NAME": "その他",
+    "TARGET": "目標属性",
+    "TARGETVALUE": "目標値"
   },
   "SYS": {
-    "DELETE": "删除"
+    "DELETE": "削除"
   },
   "PROPS": {
     "LEVEL": "レベル",
-    "ASCENDED": "（已突破）",
-    "HP": "生命力",
-    "ATTACK": "攻撃力",
-    "DEFENSE": "防御力",
-    "HP_UP": "生命力アップ",
-    "ATTACK_UP": "攻撃力アップ",
-    "DEFENSE_UP": "防御力アップ",
+    "ASCENDED": "（突破済）",
+    "HP": "HP",
+    "ATTACK": "攻撃",
+    "DEFENSE": "防御",
+    "HP_UP": "HPアップ",
+    "ATTACK_UP": "攻撃アップ",
+    "DEFENSE_UP": "防御アップ",
     "CRIT_RATE": "会心率",
     "CRIT_DMG": "会心ダメージ",
     "ENERGY_RECHARGE": "元素チャージ効率",
@@ -70,7 +70,7 @@
     "DMG_BONUS_PLUNGING": "落下攻撃ダメージ",
     "DMG_BONUS_SKILL": "元素スキルダメージ",
     "DMG_BONUS_ELEMENTAL_BURST":"元素爆発ダメージ",
-    "DMG_ANTI_CRYO": "冰元素耐性",
+    "DMG_ANTI_CRYO": "氷元素耐性",
     "DMG_ANTI_ANEMO": "風元素耐性",
     "DMG_ANTI_PHYSICAL": "物理耐性",
     "DMG_ANTI_ELECTRO": "雷元素耐性",
@@ -81,49 +81,49 @@
   },
   "GENSHIN": {
     "DMG":{
-      "ORIGIN": "不暴击伤害",
-      "CRIT": "暴击伤害",
-      "EXPECT": "期望伤害",
-      "ORIGIN_VAPORIZE": "不暴击伤害(蒸发)",
-      "CRIT_VAPORIZE": "暴击伤害(蒸发)",
-      "EXPECT_VAPORIZE": "期望伤害(蒸发)",
-      "ORIGIN_MELT": "不暴击伤害(融化)",
-      "CRIT_MELT": "暴击伤害(融化)",
-      "EXPECT_MELT": "期望伤害(融化)",
-      "CRYO": "冰元素伤害",
-      "ANEMO": "风元素伤害",
-      "PHYSICAL": "物元素伤害",
-      "ELECTRO": "雷元素伤害",
-      "GEO": "岩元素伤害",
-      "PYRO": "火元素伤害",
-      "HYDRO": "水元素伤害",
-      "DENDRO": "草元素伤害",
-      "OVERLOADED": "超载伤害",
-      "BURNING": "燃烧伤害",
-      "ELECTROCHARGED": "感电伤害",
-      "SUPERCONDUCT": "超导伤害",
-      "SWIRL_CRYO": "冰扩散伤害",
-      "SWIRL_ELECTRO": "雷扩散伤害",
-      "SWIRL_PYRO": "火扩散伤害",
-      "SWIRL_HYDRO": "水扩散伤害",
-      "DESTRUCTION": "破冰伤害",
-      "SHIELD": "结晶生命值"
+      "ORIGIN": "通常ダメージ",
+      "CRIT": "クリティカルダメージ",
+      "EXPECT": "期待ダメージ",
+      "ORIGIN_VAPORIZE": "通常ダメージ（蒸発）",
+      "CRIT_VAPORIZE": "クリティカルダメージ（蒸発）",
+      "EXPECT_VAPORIZE": "期待ダメージ（蒸発）",
+      "ORIGIN_MELT": "通常ダメージ（溶解）",
+      "CRIT_MELT": "クリティカルダメージ（溶解）",
+      "EXPECT_MELT": "期待ダメージ（溶解）",
+      "CRYO": "氷元素ダメージ",
+      "ANEMO": "風元素ダメージ",
+      "PHYSICAL": "物理ダメージ",
+      "ELECTRO": "雷元素ダメージ",
+      "GEO": "岩元素ダメージ",
+      "PYRO": "火元素ダメージ",
+      "HYDRO": "水元素ダメージ",
+      "DENDRO": "草元素ダメージ",
+      "OVERLOADED": "過負荷ダメージ",
+      "BURNING": "燃焼ダメージ",
+      "ELECTROCHARGED": "感電ダメージ",
+      "SUPERCONDUCT": "超電導ダメージ",
+      "SWIRL_CRYO": "氷拡散ダメージ",
+      "SWIRL_ELECTRO": "雷拡散ダメージ",
+      "SWIRL_PYRO": "火拡散ダメージ",
+      "SWIRL_HYDRO": "水拡散ダメージ",
+      "DESTRUCTION": "氷砕きダメージ",
+      "SHIELD": "結晶吸収量"
     },
     "OTHER": {
-      "HEALING": "治疗值",
-      "PRODUCT": "创造物生命值",
-      "SHIELD": "盾量",
-      "BUFF": "增益",
-      "OVERRIDE_ELEMENT": "附魔",
-      "DEFAULT_ELEMENT": "默认",
-      "DMG_BONUS_CRYO": "冰元素附魔",
-      "DMG_BONUS_ANEMO": "风元素附魔",
-      "DMG_BONUS_PHYSICAL": "物理附魔",
-      "DMG_BONUS_ELECTRO": "雷元素附魔",
-      "DMG_BONUS_GEO": "岩元素附魔",
-      "DMG_BONUS_PYRO": "火元素附魔",
-      "DMG_BONUS_HYDRO": "水元素附魔",
-      "DMG_BONUS_DENDRO": "草元素附魔"
+      "HEALING": "治療",
+      "PRODUCT": "創造物HP",
+      "SHIELD": "シールドHP",
+      "BUFF": "バフ",
+      "OVERRIDE_ELEMENT": "元素付与",
+      "DEFAULT_ELEMENT": "デフォルト",
+      "DMG_BONUS_CRYO": "氷",
+      "DMG_BONUS_ANEMO": "風",
+      "DMG_BONUS_PHYSICAL": "物理",
+      "DMG_BONUS_ELECTRO": "雷",
+      "DMG_BONUS_GEO": "岩",
+      "DMG_BONUS_PYRO": "火",
+      "DMG_BONUS_HYDRO": "水",
+      "DMG_BONUS_DENDRO": "草"
     }
   }
 }
