--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -125,5 +125,9 @@
       "DMG_BONUS_HYDRO": "Hydro",
       "DMG_BONUS_DENDRO": "Dendro"
     }
+  },
+  "ENKA": {
+    "DONE": "Data processing completed!",
+    "FAILED": "Processing failed."
   }
 }
